--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -14,8 +14,39 @@
   width: 100%;
   min-height: $s-32;
   background-color: var(--title-background-color);
+}
 
-  .title-wrapper {
+.title,
+.title-only,
+.inspect-title {
+  @include tabTitleTipography;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  height: 100%;
+  min-height: $s-32;
+  color: var(--title-foreground-color);
+  overflow: hidden;
+}
+
+.title-only {
+  margin-left: $s-8;
+}
+
+.inspect-title {
+  color: var(--title-foreground-color-hover);
+}
+
+.title-wrapper {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding: 0;
+  color: var(--title-foreground-color);
+  stroke: var(--title-foreground-color);
+  overflow: hidden;
+  .toggle-btn {
+    @include buttonStyle;
     display: flex;
     align-items: center;
     flex-grow: 1;
@@ -23,42 +54,7 @@
     color: var(--title-foreground-color);
     stroke: var(--title-foreground-color);
     overflow: hidden;
-    .toggle-btn {
-      @include buttonStyle;
-      display: flex;
-      align-items: center;
-      flex-grow: 1;
-      padding: 0;
-      color: var(--title-foreground-color);
-      stroke: var(--title-foreground-color);
-      overflow: hidden;
-      .collapsabled-icon {
-        @include flexCenter;
-        height: $s-24;
-        border-radius: $br-8;
-        svg {
-          @extend .button-icon-small;
-          transform: rotate(90deg);
-          stroke: var(--icon-foreground);
-        }
-        &.rotated svg {
-          transform: rotate(0deg);
-        }
-      }
-      &:hover {
-        color: var(--title-foreground-color-hover);
-        stroke: var(--title-foreground-color-hover);
-        .title {
-          color: var(--title-foreground-color-hover);
-          stroke: var(--title-foreground-color-hover);
-        }
-        .collapsabled-icon svg {
-          stroke: var(--title-foreground-color-hover);
-        }
-      }
-    }
     .collapsabled-icon {
-      @include buttonStyle;
       @include flexCenter;
       height: $s-24;
       border-radius: $br-8;
@@ -75,6 +71,7 @@
       color: var(--title-foreground-color-hover);
       stroke: var(--title-foreground-color-hover);
       .title {
+        color: var(--title-foreground-color-hover);
         stroke: var(--title-foreground-color-hover);
       }
       .collapsabled-icon svg {
@@ -82,17 +79,41 @@
       }
     }
   }
-
-  .title-button {
-    @extend .button-tertiary;
-    height: $s-32;
-    width: calc($s-24 + $s-4);
-    padding: 0;
+  .collapsabled-icon {
+    @include buttonStyle;
+    @include flexCenter;
+    height: $s-24;
     border-radius: $br-8;
     svg {
-      @extend .button-icon;
+      @extend .button-icon-small;
+      transform: rotate(90deg);
       stroke: var(--icon-foreground);
     }
+    &.rotated svg {
+      transform: rotate(0deg);
+    }
+  }
+  &:hover {
+    color: var(--title-foreground-color-hover);
+    stroke: var(--title-foreground-color-hover);
+    .title {
+      stroke: var(--title-foreground-color-hover);
+    }
+    .collapsabled-icon svg {
+      stroke: var(--title-foreground-color-hover);
+    }
+  }
+}
+
+.title-button {
+  @extend .button-tertiary;
+  height: $s-32;
+  width: calc($s-24 + $s-4);
+  padding: 0;
+  border-radius: $br-8;
+  svg {
+    @extend .button-icon;
+    stroke: var(--icon-foreground);
   }
 }
 
